cluster/apps/zigbee2mqtt/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
spec:
  type: ExternalName
  externalName: "nas.${SECRET_DEFAULT_DOMAIN}"
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
