cluster/apps/zigbee2mqtt/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqttold
  namespace: zigbee2mqtt
  annotations:
    haproxy.org/response-set-header: |
      Strict-Transport-Security "max-age=31536000"
      X-Frame-Options "DENY"
      X-Content-Type-Options "nosniff"
      Referrer-Policy "no-referrer-when-downgrade"
spec:
  rules:
  - host: "zigbee2mqttold.${SECRET_DEFAULT_DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: zigbee2mqttold
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - secretName: "${SECRET_DEFAULT_DOMAIN_CERT}"
